Fri Mar  7 00:56:16 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* dassl.cc (show_dassl_option): For values that are determined
	automatically, return a string instead of a magic value (-1.0).
	* fsolve.cc (show_fsolve_option): Likewise.
	* lsode.cc (show_lsode_option): Likewise.
	* npsol.cc (show_npsol_option): Likewise.
	* qpsol.cc (show_qpsol_option): Likewise.

	* variables.cc (extract_function): New function.
	* dassl.cc (Fdassl): Use it instead of is_valid_function.
	* fsolve.cc (Ffsolve): Likewise.
	* npsol.cc (Fnpsol): Likewise.
	* qpsol.cc (Fqpsol): Likewise.
	* quad.cc (Fquad): Likewise.

Thu Mar  6 20:07:24 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* sighandlers.cc (my_friendly_exit, octave_new_handler,
	sigfpe_handler, sigpipe_handler): Don't all error() or warning().

	* pager.cc (pager_death_handler): Don't try to clear pager, just
	print message to cerr.
	(do_sync): If the status of the pager is bad or it looks like it
	is dead, restore the interrupt handler.

	* load-save.cc (extract_keyword (istream&, char*, int&)):
	Move declaration of buf inside loop, to avoid deleting its guts
	and then trying to reuse it.
	(extract_keyword (istream&, char*)): Likewise.

Tue Mar  4 20:36:53 1997  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* pt-fcn.cc (tree_function::eval): Protect function from being
	redefined while it is being evaluated.
	(unprotect_function): New function, for use with unwind_protect stuff.
	* pt-fcn.h (tree_function::symtab_entry): New data member.
	(tree_function::init): Initialize it to 0.
	(tree_function::stash_symtab_ptr): New function.
	* parse.y (frob_function_def): Stash pointer to function's
	symbol_record in the function definition.

	* symtab.cc (symbol_record::read_only_error): New argument,
	action.  Change all callers.
	(symbol_record::rename): Don't allow read-only symbols to be renamed.

	* variables.cc (Fexist): Don't let files with `.' in their names
	confuse us.
